// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> Debe de mostrar <SearchScreen /> correctamente 1`] = `
Array [
  <h1>
    Busca un heroe
  </h1>,
  <hr />,
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Indica un heroe
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="heroName"
          onChange={[Function]}
          placeholder="Heroe"
          type="text"
          value=""
        />
        <button
          className="btn btn-primary mt-2"
        >
          Buscar...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        resultados
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Realiza una busqueda
      </div>
      <div
        className="col animate__animated animate__fadeInRight"
      />
    </div>
  </div>,
]
`;

exports[`Pruebas en <SearchScreen /> Debe de mostrar al superheroe enviado en queryString 1`] = `
Array [
  <h1>
    Busca un heroe
  </h1>,
  <hr />,
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Indica un heroe
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="heroName"
          onChange={[Function]}
          placeholder="Heroe"
          type="text"
          value="batman"
        />
        <button
          className="btn btn-primary mt-2"
        >
          Buscar...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        resultados
      </h4>
      <hr />
      <div
        className="col animate__animated animate__fadeInRight"
      >
        <div
          className="col"
        >
          <div
            className="card mb-3"
          >
            <div
              className="row g-0"
            >
              <div
                className="col-md-4"
              >
                <img
                  alt="Batman"
                  className="img-fluid rounded-start"
                  src="/assets/images/dc-batman.jpg"
                />
              </div>
              <div
                className="col-md-8"
              >
                <div
                  className="card-body"
                >
                  <h5
                    className="card-title"
                  >
                    Batman
                  </h5>
                  <p
                    className="card-text"
                  >
                    Bruce Wayne
                  </p>
                  <p
                    className="card-text"
                  >
                    <small
                      className="text-muted"
                    >
                      Detective Comics #27
                    </small>
                  </p>
                  <a
                    className="btn btn-link"
                    href="/hero/dc-batman"
                    onClick={[Function]}
                  >
                    Mas...
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
